6.14.5.2
    Documentation:
        * Removed empty entry from list of general platform requirements

6.14.5.1  2023-01-31T16:15:39-0700
    rtstats(1):
        * Commented code about what function logs messages because the code is convoluted
        * Removed trailing newline in rtstats(1) log message to eliminate extraneous log message
        * Eliminated sending of NULLPROC before closing connection because it's superfluous
        * Documented return value of ldmsend_statsbin()
        * Eliminated possibility of overrun in formatting report
        * Eliminated unnecessary log message
        * Replaced abort() due to unsupported remote LDM version with log_error() and ECONNABORTED
          return value
        * man(1) page: Corrected description of number of bytes, number of products, and
          peak-latency parameters: they are not for "this hour" but since rtstats(1) was started

    Documentation:
        * Added requirement that "RemoveIPC" in "/etc/systemd/logind.conf" must be "no" to
          prevent systemd(8) from deleting the LDM's shared-memory segment that contains the
          upstream LDM database.

    CHANGE_LOG:
        * Consolidated 6.14.4.* entries into 6.14.4. Should have done that earlier.

6.14.4  2023-01-26T11:03:17-0700
    ldmd(1):
        * Eliminated log messages when an upstream LDM process that was ACCEPTed terminates. This
          should reduce the number of log messages on the rtstats(1) mothership.
        * Moved setting of "hiyaCalled" to top of HIYA service functions
        * Made ECONNRESET error a single INFO-level log message
        * Replace some ERROR log messages with FATAL ones in the main module.

    NOAAPort:
        * Added entries with new PDTNs to GEMPAK tables:
            * g2varswmo.tbl:
                000 002 000 002 Wind Direction             Degree true  DRCT    0  -9999.00
            * g2varsncep.tbl:
                001 001 194 009 Prob precip exceeding FFG  %            PEFG--  0  -9999.00